removed tgetstr from tputs, genius .....

--- a/no_resize_handle/Makefile
+++ b/no_resize_handle/Makefile
@@ -22,7 +22,7 @@ OBJ_NAME = $(SRC_NAME:.c=.o)
 
 LIB = ./lib/libft.a
 
-FLAGS = -ggdb -Wall -Wextra -Werror
+FLAGS = -Wall -Wextra -Werror
 
 LFLAGS =  -ltermcap
 
